Corrected Separator Spacing

--- a/main.css
+++ b/main.css
@@ -146,11 +146,9 @@ body {
     color: #AC96D8;
 }
 
-/* Deal Rating */
-
-
+/* Separator spacing */
 .deals .game-stats .game-info .separator {
-    margin: 0 .5rem;
+    margin: 0 .2rem;
 }
 
 .deals .game-price .original-price {
